--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,35 @@
-API_BASE_URL="YOUR_API_BASE_URL"
-API_KEY="YOUR_API_KEY"
-MODEL_NAME="YOUR_MODEL_NAME"
+# 微信文章格式化与海报生成系统 - 环境变量配置示例
+# 复制此文件为 .env 并填入实际配置值
+
+# Flask应用配置
+SECRET_KEY=your-secret-key-here
+FLASK_ENV=development
+FLASK_DEBUG=True
+
+# AI服务配置
+# OpenAI API配置
+API_BASE_URL=https://api.openai.com/v1/chat/completions
+API_KEY=your-openai-api-key-here
+MODEL_NAME=gpt-3.5-turbo
+
+# 或者使用其他AI服务
+# API_BASE_URL=https://api.anthropic.com/v1/messages
+# API_KEY=your-anthropic-api-key-here
+# MODEL_NAME=claude-3-sonnet-20240229
+
+# 或者使用本地AI服务
+# API_BASE_URL=http://localhost:11434/v1/chat/completions
+# API_KEY=ollama
+# MODEL_NAME=llama2
+
+# 文件上传配置
+MAX_CONTENT_LENGTH=16777216  # 16MB
+UPLOAD_FOLDER=static/uploads
+
+# 海报生成配置
+POSTER_FOLDER=static/posters
+DEFAULT_POSTER_TYPE=xiaohongshu
+
+# 系统配置
+TIMEZONE=Asia/Shanghai
+LANGUAGE=zh-CN
